fix: Performance and shutdown improvements in ApplicationResourceMonitor
Problem 1 (Inefficient remove - #236):
- Used CopyOnWriteArrayList.remove(0) to trim old snapshots
- CopyOnWriteArrayList.remove(0) creates full copy of entire array
- With maxHistorySize=720, copies 720 elements every 5 seconds
- 720 * 3600/5 = ~518,400 unnecessary element copies per hour
- CPU and memory overhead from constant array allocation

Example Performance Impact:
history.add(snapshot);          // Copy 720 -> 721 elements
while (history.size() > 720) {
    history.remove(0);          // Copy 721 -> 720 elements
}
// Result: 2 full array copies per snapshot!

Problem 2 (Shutdown doesn't wait - #234):
- shutdown() called scheduler.shutdown() but returned immediately
- Didn't wait for scheduler to actually terminate
- Race condition: background task might still run during cleanup
- Background task could access resources being cleaned up
- Inconsistent with shutdown patterns elsewhere (ManagedThreadPool, etc.)

Example Race Condition:
monitor.shutdown();  // Returns immediately
applicationManager.undeploy("app");  // Cleanup starts
// collectMetrics() still running, accessing threadGroup being destroyed

Solution 1 (Performance):
- Changed from List<ResourceSnapshot> to Deque<ResourceSnapshot>
- Use ArrayDeque instead of CopyOnWriteArrayList
- Changed add() to addLast(), remove(0) to removeFirst()
- Changed get(size-1) to getLast()
- All operations now O(1) instead of O(n)

Solution 2 (Shutdown):
- Wait up to 5 seconds for scheduler termination
- If doesn't terminate, call shutdownNow()
- Wait additional 2 seconds after force shutdown
- Handle InterruptedException properly
- Log at each stage for observability
- Consistent with other shutdown methods in codebase

Benefits:
- Eliminates ~500K unnecessary array copies per hour per monitor
- Reduced CPU and memory overhead
- Scales better with larger maxHistorySize
- Clean shutdown with no race conditions
- Proper resource cleanup guarantee